--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@
 /tmp
 /out-tsc
 /bazel-out
-
+/android
+/resources
+/backup
+.vscode
 # Node
 /node_modules
 npm-debug.log
@@ -40,3 +43,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+*.jks
+
