--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.9",
+    "@capacitor-community/firebase-analytics": "^6.0.0",
+    "@capacitor-firebase/authentication": "^6.2.0",
+    "@capacitor-firebase/firestore": "^6.2.0",
+    "@capacitor/android": "^6.2.0",
+    "@capacitor/cli": "^6.2.0",
+    "@capacitor/core": "^6.2.0",
     "express": "^4.18.2",
     "firebase": "^10.14.1",
     "oraculo": "file:",
